--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     </script>
     <script src="./menu.js"></script>
     <script src="./modal.js"></script>
+    <script src="./events.js"></script>
   </body>
 
 </html>
